--- a/meteor/client/main.html
+++ b/meteor/client/main.html
@@ -10,7 +10,7 @@
 </body>
 
 <template name="hello">
-  <button>Click Me</button>
+  <button>Click Me ;)</button>
   <p>You've pressed the button {{counter}} times.</p>
 </template>
 
