--- a/meteor/client/body.html
+++ b/meteor/client/body.html
@@ -1,54 +1,25 @@
 <body>
 
-<!-- Status bar overlay for full screen mode (PhoneGap) -->
-<div class="statusbar-overlay"></div>
-<!-- Panels overlay-->
-<div class="panel-overlay"></div>
-<!-- Left panel with reveal effect-->
-<div class="panel panel-left panel-reveal">
-    <div class="content-block">
-        <p>Left panel content goes here</p>
-    </div>
+<div class="panel panel-left panel-cover">
+    <div class="view panel-view"> ...</div>
 </div>
 <!-- Views -->
 <div class="views">
-    <!-- Your main view, should have "view-main" class -->
+    <!-- Your main view -->
     <div class="view view-main">
-        <!-- Top Navbar-->
-        <div class="navbar">
-            <div class="navbar-inner">
-                <!-- We need cool sliding animation on title element, so we have additional "sliding" class -->
-                <div class="center sliding">Awesome App</div>
-                <div class="right">
-                    <!--
-                      Right link contains only icon - additional "icon-only" class
-                      Additional "open-panel" class tells app to open panel when we click on this link
-                    -->
-                    <a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a>
-                </div>
-            </div>
-        </div>
-        <!-- Pages container, because we use fixed-through navbar and toolbar, it has additional appropriate classes-->
-        <div class="pages navbar-through toolbar-through">
-            <!-- Page, "data-page" contains page name -->
-            <div data-page="index" class="page">
-                <!-- Scrollable page content -->
-                <div class="page-content">
-                    <p>Page content goes here</p>
-                    <!-- Link to another page -->
-                    <a href="about.html">About app</a>
-                </div>
-            </div>
-        </div>
-        <!-- Bottom Toolbar-->
-        <div class="toolbar">
-            <div class="toolbar-inner">
-                <!-- Toolbar links -->
-                <a href="#" class="link">Link 1</a>
-                <a href="#" class="link">Link 2</a>
-            </div>
-        </div>
+        <!-- Navbar-->
+        <!-- Pages -->
+        <!-- Toolbar-->
     </div>
+    <!-- Another view -->
+    <div class="view another-view">
+        <!-- Navbar-->
+        <!-- Pages -->
+        <!-- Toolbar-->
+    </div>
+</div>
+<div class="popup">
+    <div class="view popup-view"> ...</div>
 </div>
 
 <!--<h1>Welcome to Meteor!</h1>
