--- a/meteor/client/body.html
+++ b/meteor/client/body.html
@@ -1,29 +1,10 @@
 <body>
 
-<div class="panel panel-left panel-cover">
-    <div class="view panel-view"> ...</div>
-</div>
-<!-- Views -->
-<div class="views">
-    <!-- Your main view -->
-    <div class="view view-main">
-        <!-- Navbar-->
-        <!-- Pages -->
-        <!-- Toolbar-->
-    </div>
-    <!-- Another view -->
-    <div class="view another-view">
-        <!-- Navbar-->
-        <!-- Pages -->
-        <!-- Toolbar-->
-    </div>
-</div>
-<div class="popup">
-    <div class="view popup-view"> ...</div>
-</div>
+<!-- Status bar overlay for full screen mode (PhoneGap) -->
+<div class="statusbar-overlay"></div>
 
-<!--<h1>Welcome to Meteor!</h1>
+<!-- Filled due to routing groups -->
+<!-- Debug! -->
+{{> two_view}}
 
-    {{> hello}}
-    {{> info}}-->
 </body>
