--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -20,4 +20,73 @@
     <!-- Material(Android) theme styles -->
     <!--<link rel="stylesheet" href="/packages/nobutakaoshiro_framework7-ios-material/framework7/dist/css/framework7.material.min.css">-->
     <!--<link rel="stylesheet" href="/packages/nobutakaoshiro_framework7-ios-material/framework7/dist/css/framework7.material.colors.min.css">-->
+
+    <!--IOS WebApp-->
+
+    <!-- Allow web app to be run in full-screen mode. -->
+    <meta name="apple-mobile-web-app-capable"
+          content="yes">
+
+    <!-- Make the app title different than the page title. -->
+    <meta name="apple-mobile-web-app-title"
+          content="RunItEasy">
+
+    <!-- Configure the status bar. -->
+    <meta name="apple-mobile-web-app-status-bar-style"
+          content="black">
+
+    <!-- Set the viewport. -->
+    <meta name="viewport"
+          content="initial-scale=1">
+
+    <!-- Disable automatic phone number detection. -->
+    <meta name="format-detection"
+          content="telephone=no">
+
+    <!-- ICONS -->
+
+    <!-- iPad retina icon -->
+    <link href="https://placehold.it/152"
+          sizes="152x152"
+          rel="apple-touch-icon-precomposed">
+
+    <!-- iPad retina icon (iOS < 7) -->
+    <link href="https://placehold.it/144"
+          sizes="144x144"
+          rel="apple-touch-icon-precomposed">
+
+    <!-- iPad non-retina icon -->
+    <link href="https://placehold.it/76"
+          sizes="76x76"
+          rel="apple-touch-icon-precomposed">
+
+    <!-- iPad non-retina icon (iOS < 7) -->
+    <link href="https://placehold.it/72"
+          sizes="72x72"
+          rel="apple-touch-icon-precomposed">
+
+    <!-- iPhone 6 Plus icon -->
+    <link href="https://placehold.it/180"
+          sizes="120x120"
+          rel="apple-touch-icon-precomposed">
+
+    <!-- iPhone retina icon (iOS < 7) -->
+    <link href="https://placehold.it/114"
+          sizes="114x114"
+          rel="apple-touch-icon-precomposed">
+
+    <!-- iPhone non-retina icon (iOS < 7) -->
+    <link href="https://placehold.it/57"
+          sizes="57x57"
+          rel="apple-touch-icon-precomposed">
+
+    <!-- HACKS -->
+
+    <!-- Prevent text size change on orientation change. -->
+    <style>
+        html {
+            -webkit-text-size-adjust: 100%;
+        }
+    </style>
+
 </head>
