--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -1,5 +1,5 @@
 <head>
-    <title>BJSbase</title>
+    <title>RunItEasy</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -7,9 +7,6 @@
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
-    <!-- Your app title -->
-    <title>Application Title</title>
 
     <!-- Framework7 iOS theme styles -->
     <link rel="stylesheet"
