Made login screen as a global overlay callable by Meteor.f7.loginScreen();

--- a/meteor/client/body.html
+++ b/meteor/client/body.html
@@ -1,5 +1,6 @@
 <body>
 
+{{>login}}
 <!-- Status bar overlay for full screen mode (PhoneGap) -->
 <div class="statusbar-overlay"></div>
 <!-- Filled due to routing groups -->
