--- a/meteor/client/body.html
+++ b/meteor/client/body.html
@@ -1,5 +1,7 @@
 <body>
 
+<!--[if IE]> Get a better browser! <![endif]-->
+
 {{>login}}
 <!-- Status bar overlay for full screen mode (PhoneGap) -->
 <div class="statusbar-overlay"></div>
