--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -43,37 +43,37 @@
     <!-- ICONS -->
 
     <!-- iPad retina icon -->
-    <link href="https://placehold.it/152"
+    <link href="/icons/Icon-76@2x.png"
           sizes="152x152"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPad retina icon (iOS < 7) -->
-    <link href="https://placehold.it/144"
+    <link href="/icons/Icon-72@2x.png"
           sizes="144x144"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPad non-retina icon -->
-    <link href="https://placehold.it/76"
+    <link href="/icons/Icon-76.png"
           sizes="76x76"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPad non-retina icon (iOS < 7) -->
-    <link href="https://placehold.it/72"
+    <link href="/icons/Icon-72.png"
           sizes="72x72"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPhone 6 Plus icon -->
-    <link href="https://placehold.it/180"
+    <link href="/icons/Icon-60@2x.png"
           sizes="120x120"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPhone retina icon (iOS < 7) -->
-    <link href="https://placehold.it/114"
+    <link href="/icons/Icon-72@2x.png"
           sizes="114x114"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPhone non-retina icon (iOS < 7) -->
-    <link href="https://placehold.it/57"
+    <link href="/icons/Icon.png"
           sizes="57x57"
           rel="apple-touch-icon-precomposed">
 
