--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -8,6 +8,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+    <!-- Icon -->
+    <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
+
     <!-- Framework7 iOS theme styles -->
     <link rel="stylesheet"
           href="/packages/nobutakaoshiro_framework7-ios-material/framework7/dist/css/framework7.ios.min.css">
