--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -33,7 +33,7 @@
 
     <!-- Configure the status bar. -->
     <meta name="apple-mobile-web-app-status-bar-style"
-          content="black">
+          content="white">
 
     <!-- Set the viewport. -->
     <meta name="viewport"
