Added fullscreen button @ login screen

--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -11,6 +11,7 @@
     <!-- Icon -->
     <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
 
+    <link rel="stylesheet" href="/framework7-icons.css">
     <!-- Framework7 iOS theme styles -->
     <link rel="stylesheet"
           href="/packages/nobutakaoshiro_framework7-ios-material/framework7/dist/css/framework7.ios.min.css">
@@ -21,11 +22,14 @@
     <!--<link rel="stylesheet" href="/packages/nobutakaoshiro_framework7-ios-material/framework7/dist/css/framework7.material.min.css">-->
     <!--<link rel="stylesheet" href="/packages/nobutakaoshiro_framework7-ios-material/framework7/dist/css/framework7.material.colors.min.css">-->
 
-    <!--IOS WebApp-->
-
+    <!-- WebApp -->
     <!-- Allow web app to be run in full-screen mode. -->
-    <meta name="apple-mobile-web-app-capable"
-          content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
+    <!-- Android WebApp -->
+    <link rel="icon" sizes="512x512" href="/icons/Logo512.png">
+
+    <!--IOS WebApp-->
 
     <!-- Make the app title different than the page title. -->
     <meta name="apple-mobile-web-app-title"
@@ -46,37 +50,37 @@
     <!-- ICONS -->
 
     <!-- iPad retina icon -->
-    <link href="/icons/Icon-76@2x.png"
+    <link href="/icons/iOS/Icon-76@2x.png"
           sizes="152x152"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPad retina icon (iOS < 7) -->
-    <link href="/icons/Icon-72@2x.png"
+    <link href="/icons/iOS/Icon-72@2x.png"
           sizes="144x144"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPad non-retina icon -->
-    <link href="/icons/Icon-76.png"
+    <link href="/icons/iOS/Icon-76.png"
           sizes="76x76"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPad non-retina icon (iOS < 7) -->
-    <link href="/icons/Icon-72.png"
+    <link href="/icons/iOS/Icon-72.png"
           sizes="72x72"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPhone 6 Plus icon -->
-    <link href="/icons/Icon-60@2x.png"
+    <link href="/icons/iOS/Icon-60@2x.png"
           sizes="120x120"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPhone retina icon (iOS < 7) -->
-    <link href="/icons/Icon-72@2x.png"
+    <link href="/icons/iOS/Icon-72@2x.png"
           sizes="114x114"
           rel="apple-touch-icon-precomposed">
 
     <!-- iPhone non-retina icon (iOS < 7) -->
-    <link href="/icons/Icon.png"
+    <link href="/icons/iOS/Icon.png"
           sizes="57x57"
           rel="apple-touch-icon-precomposed">
 
