--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -75,7 +75,7 @@
           rel="apple-touch-icon-precomposed">
 
     <!-- iPhone retina icon (iOS < 7) -->
-    <link href="/icons/iOS/Icon-72@2x.png"
+    <link href="/icons/iOS/Icon@2x.png"
           sizes="114x114"
           rel="apple-touch-icon-precomposed">
 
@@ -83,6 +83,15 @@
     <link href="/icons/iOS/Icon.png"
           sizes="57x57"
           rel="apple-touch-icon-precomposed">
+
+    <!-- iPhone 512px -->
+    <link href="/icons/iOS/Icon-512.png"
+          sizes="512x512"
+          rel="apple-touch-icon-precomposed">
+
+    <!--Android-->
+    <link rel="icon" sizes="192x192" href="/icons/Android/xxxhdpi.png">
+    <link rel="icon" sizes="512x512" href="/icons/Android/GooglePlayStore.png">
 
     <!-- HACKS -->
 
