Updated printing, multiple page printing is possible (closes #42)

--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -13,9 +13,9 @@
 
     <link rel="stylesheet" href="/framework7-icons.css">
     <!-- Framework7 iOS theme styles -->
-    <link rel="stylesheet"
+    <link rel="stylesheet" media="not print"
           href="/packages/nobutakaoshiro_framework7-ios-material/framework7/dist/css/framework7.ios.min.css">
-    <link rel="stylesheet"
+    <link rel="stylesheet" media="not print"
           href="/packages/nobutakaoshiro_framework7-ios-material/framework7/dist/css/framework7.ios.colors.min.css">
 
     <!-- Material(Android) theme styles -->
