--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="/framework7-icons.css">
+    <link rel="stylesheet" href="/Roboto.css">
     <!-- Framework7 iOS theme styles -->
     <link rel="stylesheet" media="not print"
           href="/packages/nobutakaoshiro_framework7-ios-material/framework7/dist/css/framework7.ios.min.css">
