--- a/meteor/client/body.html
+++ b/meteor/client/body.html
@@ -8,4 +8,185 @@
 <!-- Filled due to routing groups -->
 <!-- Debug! -->
 
+
+<div class="popup popup-datanschutz">
+    <p style="right: 14px; top: 0; position: absolute;"><a href="#" class="close-popup"><i
+            class="f7-icons">close_round</i></a>
+    </p>
+    <div class="content-block">
+        <h2>Datanschutzerklärung</h2>
+        <div class="page-content">
+            <h3>Datenschutz</h3>
+            <p>Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre
+                personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie
+                dieser Datenschutzerklärung.</p>
+            <p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf
+                unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben
+                werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre
+                ausdrückliche Zustimmung nicht an Dritte weitergegeben.</p>
+            <p>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail)
+                Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist
+                nicht möglich.</p><br/>
+            <h3>Cookies</h3>
+            <p>Die Internetseiten verwenden teilweise so genannte Cookies. Cookies richten auf Ihrem Rechner keinen
+                Schaden an und enthalten keine Viren. Cookies dienen dazu, unser Angebot nutzerfreundlicher, effektiver
+                und sicherer zu machen. Cookies sind kleine Textdateien, die auf Ihrem Rechner abgelegt werden und die
+                Ihr Browser speichert.</p>
+            <p>Die meisten der von uns verwendeten Cookies sind so genannte „Session-Cookies“. Sie werden nach Ende
+                Ihres Besuchs automatisch gelöscht. Andere Cookies bleiben auf Ihrem Endgerät gespeichert, bis Sie diese
+                löschen. Diese Cookies ermöglichen es uns, Ihren Browser beim nächsten Besuch wiederzuerkennen.</p>
+            <p>Sie können Ihren Browser so einstellen, dass Sie über das Setzen von Cookies informiert werden und
+                Cookies nur im Einzelfall erlauben, die Annahme von Cookies für bestimmte Fälle oder generell
+                ausschließen sowie das automatische Löschen der Cookies beim Schließen des Browser aktivieren. Bei der
+                Deaktivierung von Cookies kann die Funktionalität dieser Website eingeschränkt sein.</p><br/>
+            <h3>Server-Log-Files</h3>
+            <p>Der Provider der Seiten erhebt und speichert automatisch Informationen in so genannten Server-Log Files,
+                die Ihr Browser automatisch an uns übermittelt. Dies sind:</p>
+            <ul>
+                <li>Browsertyp/ Browserversion</li>
+                <li>verwendetes Betriebssystem</li>
+                <li>Referrer URL</li>
+                <li>Hostname des zugreifenden Rechners</li>
+                <li>Uhrzeit der Serveranfrage</li>
+            </ul>
+            <p><br/>Diese Daten sind nicht bestimmten Personen zuordenbar. Eine Zusammenführung dieser Daten mit anderen
+                Datenquellen wird nicht vorgenommen. Wir behalten uns vor, diese Daten nachträglich zu prüfen, wenn uns
+                konkrete Anhaltspunkte für eine rechtswidrige Nutzung bekannt werden.</p><br/>
+            <h3>Datenschutzerklärung für die Nutzung von Google Analytics</h3>
+            <p>Diese Website nutzt Funktionen des Webanalysedienstes Google Analytics. Anbieter ist die Google Inc.,
+                1600 Amphitheatre Parkway Mountain View, CA 94043, USA.</p>
+            <p>Google Analytics verwendet sog. "Cookies". Das sind Textdateien, die auf Ihrem Computer gespeichert
+                werden und die eine Analyse der Benutzung der Website durch Sie ermöglichen. Die durch den Cookie
+                erzeugten Informationen über Ihre Benutzung dieser Website werden in der Regel an einen Server von
+                Google in den USA übertragen und dort gespeichert.</p>
+            <p>Mehr Informationen zum Umgang mit Nutzerdaten bei Google Analytics finden Sie in der Datenschutzerklärung
+                von Google: <a href="https://support.google.com/analytics/answer/6004245?hl=de">https://support.google.com/analytics/answer/6004245?hl=de</a>
+            </p>
+            <p><strong>Browser Plugin</strong></p>
+            <p>Sie können die Speicherung der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software
+                verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche
+                Funktionen dieser Website vollumfänglich werden nutzen können. Sie können darüber hinaus die Erfassung
+                der durch das Cookie erzeugten und auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse)
+                an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem sie das unter dem folgenden
+                Link verfügbare Browser-Plugin herunterladen und installieren: <a
+                        href="https://tools.google.com/dlpage/gaoptout?hl=de">https://tools.google.com/dlpage/gaoptout?hl=de</a>
+            </p>
+            <p><strong>Widerspruch gegen Datenerfassung</strong></p>
+            <p>Sie können die Erfassung Ihrer Daten durch Google Analytics verhindern, indem Sie auf folgenden Link
+                klicken. Es wird ein Opt-Out-Cookie gesetzt, dass das Erfassung Ihrer Daten bei zukünftigen Besuchen
+                dieser Website verhindert: <a href="javascript:gaOptout();">Google Analytics deaktivieren</a></p>
+            <p><strong>Auftragsdatenverarbeitung</strong></p>
+            <p>Wir haben mit Google einen Vertrag zur Auftragsdatenverarbeitung abgeschlossen und setzen die strengen
+                Vorgaben der deutschen Datenschutzbehörden bei der Nutzung von Google Analytics vollständig um.</p>
+            <p><strong>IP-Anonymisierung</strong></p>
+            <p>Wir nutzen die Funktion "Aktivierung der IP-Anonymisierung" auf dieser Webseite. Dadurch wird Ihre
+                IP-Adresse von Google jedoch innerhalb von Mitgliedstaaten der Europäischen Union oder in anderen
+                Vertragsstaaten des Abkommens über den Europäischen Wirtschaftsraum zuvor gekürzt. Nur in Ausnahmefällen
+                wird die volle IP-Adresse an einen Server von Google in den USA übertragen und dort gekürzt. Im Auftrag
+                des Betreibers dieser Website wird Google diese Informationen benutzen, um Ihre Nutzung der Website
+                auszuwerten, um Reports über die Websiteaktivitäten zusammenzustellen und um weitere mit der
+                Websitenutzung und der Internetnutzung verbundene Dienstleistungen gegenüber dem Websitebetreiber zu
+                erbringen. Die im Rahmen von Google Analytics von Ihrem Browser übermittelte IP-Adresse wird nicht mit
+                anderen Daten von Google zusammengeführt.
+            </p><br/>
+            <h3>Auskunft, Löschung, Sperrung</h3>
+            <p>Sie haben jederzeit das Recht auf unentgeltliche Auskunft über Ihre gespeicherten personenbezogenen
+                Daten, deren Herkunft und Empfänger und den Zweck der Datenverarbeitung sowie ein Recht auf
+                Berichtigung, Sperrung oder Löschung dieser Daten. Hierzu sowie zu weiteren Fragen zum Thema
+                personenbezogene Daten können Sie sich jederzeit unter der im Impressum angegebenen Adresse an uns
+                wenden.</p><br/>
+            <h3>Widerspruch Werbe-Mails</h3>
+            <p>Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten zur übersendung von nicht
+                ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit widersprochen. Die Betreiber
+                der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von
+                Werbeinformationen, etwa durch Spam-E-Mails, vor.</p><br/>
+            <p><em>Quellenangabe: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></em></p>
+        </div>
+    </div>
+</div>
+
+<div class="popup popup-impressum">
+    <p style="right: 14px; top: 0; position: absolute;"><a href="#" class="close-popup"><i
+            class="f7-icons">close_round</i></a>
+    </p>
+    <div class="content-block">
+        <h2>Impressum</h2>
+        <div class="page-content">
+            <h3>Angaben gemäß § 5 TMG:</h3>
+            <p>Max Mustermann<br/>
+                RunItEasy<br/>
+                Musterstraße 111<br/>
+                Gebäude 44<br/>
+                90210 Musterstadt
+            </p>
+            <h3>Kontakt:</h3>
+            <table>
+                <tr>
+                    <td>Telefon:</td>
+                    <td>+49 (0) 123 44 55 66</td>
+                </tr>
+                <tr>
+                    <td>Telefax:</td>
+                    <td>+49 (0) 123 44 55 99</td>
+                </tr>
+                <tr>
+                    <td>E-Mail:</td>
+                    <td>mustermann@musterfirma.de</td>
+                </tr>
+            </table>
+            <h3>Umsatzsteuer-ID:</h3>
+            <p>Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz:<br/>
+                DE 999 999 999</p>
+            <h3>Aufsichtsbehörde:</h3>
+            <p>Landratsamt Musterstadt</p>
+            <h3>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h3>
+            <p>Beate Beispielhaft<br/>
+                <br/>
+                Musterstraße 110<br/>
+                Gebäude 33<br/>
+                90210 Musterstadt</p>
+            <h3>Hinweis auf EU-Streitschlichtung</h3>
+            <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a
+                    href="http://ec.europa.eu/consumers/odr">http://ec.europa.eu/consumers/odr</a><br/> Unsere
+                E-Mail-Adresse finden sie oben im Impressum.</p>
+            <p> </p>
+
+            <p>Quelle: <em><a href="https://www.e-recht24.de/artikel/datenschutz/209.html">https://www.e-recht24.de</a></em>
+            </p>
+
+            <p> </p>
+            <h2>Haftungsausschluss (Disclaimer)</h2>
+            <h3>Haftung für Inhalte</h3>
+            <p>Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den
+                allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht
+                verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu
+                forschen, die auf eine rechtswidrige Tätigkeit hinweisen.</p>
+            <p>Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen
+                bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis
+                einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden
+                wir diese Inhalte umgehend entfernen.</p>
+            <h3>Haftung für Links</h3>
+            <p>Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben.
+                Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der
+                verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die
+                verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft.
+                Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar.</p>
+            <p>Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer
+                Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links
+                umgehend entfernen.</p>
+            <h3>Urheberrecht</h3>
+            <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen
+                Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der
+                Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.
+                Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.</p>
+            <p>Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter
+                beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine
+                Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden
+                von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
+            <p> </p>
+
+        </div>
+    </div>
+</div>
+
 </body>
