Fixed typo Datanschutzerklärung -> Datenschutzerklärung

--- a/meteor/client/body.html
+++ b/meteor/client/body.html
@@ -14,7 +14,7 @@
             class="f7-icons">close_round</i></a>
     </p>
     <div class="content-block">
-        <h2>Datanschutzerklärung</h2>
+        <h2>Datenschutzerklärung</h2>
         <div class="page-content">
             <h3>Datenschutz</h3>
             <p>Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre
