Added connection info bar to the top of the body

--- a/meteor/client/body.html
+++ b/meteor/client/body.html
@@ -1,5 +1,5 @@
 <body>
-
+<div style="{{#if isOffline}}background-color: red;{{else}}background-color: green;{{/if}} height: 2px;"></div>
 <!--[if IE]> Get a better browser! <![endif]-->
 
 <!-- Status bar overlay for full screen mode (PhoneGap) -->
