Added transition to offline indicator

--- a/meteor/client/body.html
+++ b/meteor/client/body.html
@@ -1,5 +1,6 @@
 <body>
-<div style="{{#if isOffline}}background-color: red;{{else}}background-color: green;{{/if}} height: 2px;"></div>
+<div style="{{#if isOffline}}background-color: red;{{else}}background-color: green;{{/if}} height: 2px;"
+     class="bg-color-transition"></div>
 <!--[if IE]> Get a better browser! <![endif]-->
 
 <!-- Status bar overlay for full screen mode (PhoneGap) -->
