--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -10,8 +10,7 @@
     <!-- Icon -->
     <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="/framework7-icons.css">
-    <link rel="stylesheet" href="/Roboto.css">
+    <link rel="stylesheet" href="/fonts/Roboto.css">
 
     <!-- WebApp -->
     <!-- Allow web app to be run in full-screen mode. -->
