--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -7,6 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+    <script src="/papaparse.min.js"></script>
+
     <!-- Icon -->
     <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
 
