Replaced sie with Sie

--- a/meteor/client/popups/datenschutz.html
+++ b/meteor/client/popups/datenschutz.html
@@ -50,7 +50,7 @@
         verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche
         Funktionen dieser Website vollumfänglich werden nutzen können. Sie können darüber hinaus die Erfassung
         der durch das Cookie erzeugten und auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse)
-        an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem sie das unter dem folgenden
+        an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem Sie das unter dem folgenden
         Link verfügbare Browser-Plugin herunterladen und installieren: <a
                 href="https://tools.google.com/dlpage/gaoptout?hl=de">https://tools.google.com/dlpage/gaoptout?hl=de</a>
     </p>
