--- a/meteor/client/popups/impressum.html
+++ b/meteor/client/popups/impressum.html
@@ -35,7 +35,7 @@
     <h3>Hinweis auf EU-Streitschlichtung</h3>
     <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a
             href="http://ec.europa.eu/consumers/odr">http://ec.europa.eu/consumers/odr</a><br/> Unsere
-        E-Mail-Adresse finden sie oben im Impressum.</p>
+        E-Mail-Adresse finden Sie oben im Impressum.</p>
     <p> </p>
 
     <p>Quelle: <em><a href="https://www.e-recht24.de/artikel/datenschutz/209.html">https://www.e-recht24.de</a></em>
