Added cookie check.

--- a/meteor/client/head.html
+++ b/meteor/client/head.html
@@ -9,6 +9,12 @@
 
     <script src="/papaparse.min.js"></script>
 
+    <script>
+        if (!navigator.cookieEnabled) {
+            alert("Bitte aktivieren Sie Cookies in Ihren Browsereinstellungen, damit Sie \"RunItEasy\" benutzen können.");
+        }
+    </script>
+
     <!-- Icon -->
     <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
 
