Added basic react page @ /react

--- a/meteor/client/body.html
+++ b/meteor/client/body.html
@@ -12,5 +12,6 @@
 {{>popup class="popup-datenschutz" title="Datenschutzerklärung" content="datenschutz-popup"}}
 {{>popup class="popup-impressum" title="Impressum" content="impressum-popup"}}
 
+<div id="render-target"></div>
 
 </body>
