--- a/meteor/client/popups/impressum.html
+++ b/meteor/client/popups/impressum.html
@@ -1,44 +1,10 @@
 <template name="impressum-popup">
-    <h3>Angaben gemäß § 5 TMG:</h3>
-    <p>Max Mustermann<br/>
-        RunItEasy<br/>
-        Musterstraße 111<br/>
-        Gebäude 44<br/>
-        90210 Musterstadt
-    </p>
     <h3>Kontakt:</h3>
-    <table>
-        <tr>
-            <td>Telefon:</td>
-            <td>+49 (0) 123 44 55 66</td>
-        </tr>
-        <tr>
-            <td>Telefax:</td>
-            <td>+49 (0) 123 44 55 99</td>
-        </tr>
-        <tr>
-            <td>E-Mail:</td>
-            <td>mustermann@musterfirma.de</td>
-        </tr>
-    </table>
-    <h3>Umsatzsteuer-ID:</h3>
-    <p>Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz:<br/>
-        DE 999 999 999</p>
-    <h3>Aufsichtsbehörde:</h3>
-    <p>Landratsamt Musterstadt</p>
-    <h3>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h3>
-    <p>Beate Beispielhaft<br/>
-        <br/>
-        Musterstraße 110<br/>
-        Gebäude 33<br/>
-        90210 Musterstadt</p>
-    <h3>Hinweis auf EU-Streitschlichtung</h3>
-    <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a
-            href="http://ec.europa.eu/consumers/odr">http://ec.europa.eu/consumers/odr</a><br/> Unsere
-        E-Mail-Adresse finden Sie oben im Impressum.</p>
-    <p> </p>
-
-    <p>Quelle: <em><a href="https://www.e-recht24.de/artikel/datenschutz/209.html">https://www.e-recht24.de</a></em>
+    <p>Merlin Brandt<br/>
+        RunItEasy<br/>
+        Schüttberg 9<br/>
+        21502 Geesthacht<br/>
+        merlin.brandt@hotmail.de
     </p>
 
     <p> </p>
